--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
+torch==2.3.1
 Flask==2.3.2
 Flask-SQLAlchemy==3.0.5
-spacy==3.8.5
 flask-babel==4.0.0
-#python -m spacy download fr_dep_news_trf
+pandas==2.2.3
+spacy==3.8.5
