add relative links to fix the deployment problem

--- a/masculead.ini
+++ b/masculead.ini
@@ -1,11 +1,10 @@
 [uwsgi]
-module = wsgi:app
+module = wsgi:application
 
 master = true
 processes = 5
 
-socket = masculead.sock
-chmod-socket = 660
+http = 127.0.0.1:5000
 vacuum = true
 
 die-on-term = true
